--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -106,6 +106,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Code\Card.cpp" />
     <ClCompile Include="Code\Enemy.cpp" />
     <ClCompile Include="Code\GameScene.cpp" />
     <ClCompile Include="Code\Player.cpp" />
@@ -190,6 +191,7 @@
     <None Include="Resources\shaders\Sprite.hlsli" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Code\Card.h" />
     <ClInclude Include="Code\Enemy.h" />
     <ClInclude Include="Code\GameScene.h" />
     <ClInclude Include="Code\Player.h" />
